<resources>
    <string name="app_name">GCM</string>
    <!-- Strings related to login -->
    <string name="prompt_username">请输入账户名称</string>
    <string name="prompt_email">请输入邮箱地址</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_set2ndpwd">请输入6位数字密码</string>
    <string name="prompt_confirmpwd">请再次输入密码</string>
    <string name="prompt_input_num">请输入数量</string>
    <string name="prompt_min_price">请输入最小限额</string>
    <string name="prompt_unit_price">请输入单价</string>
    <string name="prompt_address">请输入地址</string>
    <string name="prompt_coincount">请输入数量，至少100币,手续费5%</string>
    <string name="prompt_2ndpwd">请输入二级密码</string>
    <string name="action_register">注册</string>
    <string name="action_copy">复制</string>
    <string name="action_buynow">立即购买</string>
    <string name="invite_code">请输入邀请码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_transfer">转账</string>
    <string name="action_set2ndpwd">设置二级密码</string>
    <string name="action_publish_confirm">确认发布</string>
    <string name="action_exit">退出</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名不合法！</string>
    <string name="invalid_password">密码必须大于5位！</string>
    <string name="login_failed">"登录失败！"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_block">区块</string>
    <string name="title_current_price">当前价格(GCM/CNY)</string>
    <string name="title_current_average_price">今日均价(GCM/CNY)</string>
    <string name="title_current_high_price">今日最高(GCM/CNY)</string>
    <string name="title_float_ratio">浮动比例</string>
    <string name="load_more_data">加载更多数据...</string>
    <string name="loading_data">数据加载中...</string>
    <string name="no_more_data">没有更多信息了！</string>
    <string name="title_dashboard">生态</string>
    <string name="title_notifications">资产</string>
    <string name="title_extends">我的</string>
    <string name="title_label1">1.</string>
    <string name="title_label2">2.</string>
    <string name="title_label3">3.</string>
    <string name="title_noblock">您还没有购买区块，请去首页点击购买！</string>
    <string name="title_account">账户</string>
    <string name="title_gcm">GCM可用</string>
    <string name="title_freeze">冻结</string>
    <string name="title_cny">折合cny</string>
    <string name="title_notice">公告</string>
    <string name="title_nonotice">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;自2021年3月起GCM正式登陆中国大陆开始搭建创世区块！\n\n\n\n\n\n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;
        2021年3月1日</string>
    <string name="title_username">用户名称</string>
    <string name="title_email">邮箱</string>
    <string name="title_invite_code">邀请码</string>
    <string name="title_mygroup">我的社群</string>
    <string name="title_coming_soon">敬请期待</string>
    <string name="title_modpwd">修改登录密码</string>
    <string name="title_mod_collection_info">修改收款账户</string>
    <string name="title_mod_wechat_code">修改微信收款码</string>
    <string name="title_mod_alipay_code">修改支付宝收款码</string>
    <string name="title_mod_bank_account">修改银行账户</string>
    <string name="title_2ndsetpwd">二级密码设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_recharge">充币</string>
    <string name="action_withdraw">提币</string>
    <string name="title_address">地址</string>
    <string name="tip_modWechatCode">请上传微信收款码:</string>
    <string name="tip_modAlipayCode">请上传支付宝收款码:</string>
    <string name="tip_modBankCard">请上传银行卡:</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="bt_publish">发布</string>
    <string name="bt_order">订单</string>
    <string name="bt_set_default">设为默认</string>

    <string name="sell">出售</string>
    <string name="cfm_sell">已入账，确认转币</string>
    <string name="buy">购买</string>
    <string name="cfm_buy">已转账，确认继续</string>

    <string name="sell_detail">出售详情</string>
    <string name="buy_detail">购买详情</string>
    <string name="title_activity_sc">安全中心</string>
    <string name="title_activity_pc">个人设置</string>

    <string name="channel_media">多媒体</string>
    <string name="channel_critical">严重的</string>
    <string name="channel_importance">重要的</string>
    <string name="channel_default">默认的</string>
    <string name="channel_low">低级别的</string>
</resources>