<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.btc.application.ui.register.RegisterActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="@drawable/email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <EditText
        android:id="@+id/username"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/email"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/confirmPwd"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/password"
        android:hint="@string/prompt_confirmpwd"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/inviteCode"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/email"
        android:hint="@string/invite_code"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/confirmPwd"
        app:layout_constraintLeft_toLeftOf="@id/confirmPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/registerSubmit"
        android:layout_width="330dp"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login"
        android:text="@string/action_register"
        app:layout_constraintTop_toBottomOf="@id/inviteCode"
        app:layout_constraintLeft_toLeftOf="@id/inviteCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>