<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WithdrawActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="300dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:hint="@string/prompt_address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:digits="0123456789"
        android:hint="@string/prompt_coincount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="@drawable/password"
        android:hint="@string/prompt_2ndpwd"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:maxLength="6"
        android:digits="0123456789"
        app:layout_constraintTop_toBottomOf="@id/count"
        app:layout_constraintLeft_toLeftOf="@id/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.btc.application.util.CustomBtn
        android:id="@+id/submit"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="@drawable/login"
        android:layout_gravity="center"
        android:text="@string/action_transfer"
        android:layout_marginTop="250dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>