<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.btc.application.ui.notifications.NotificationsFragment">

    <ImageView
        style="@style/BackGroundImageView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/BackGroundImageView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_block"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="300dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noDataView"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="250dp"
        android:text="@string/title_noblock"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="250dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/labelView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="250dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/labelView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label3"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="250dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/areaView1"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/areaView2"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/areaView3"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/accountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_account"
        android:layout_marginStart="5dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="300dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gcmLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_gcm"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="350dp"
        android:layout_marginTop="270dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/gcmView"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="20dp"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/freezeLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_freeze"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="350dp"
        android:layout_marginTop="320dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/freezeView"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="320dp"
        android:text="0"
        android:gravity="right"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cnyLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cny"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="350dp"
        android:layout_marginTop="370dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cnyView"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/recharge"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="start"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="82dp"
        android:drawableTop="@drawable/icon_recharge"
        android:text="@string/action_recharge"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintLeft_toLeftOf="@id/cnyView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cnyView" />

    <Button
        android:id="@+id/withdraw"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="start"
        android:layout_marginTop="236dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:drawableTop="@drawable/icon_withdraw"
        android:text="@string/action_withdraw"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recharge"
        app:layout_constraintBaseline_toBaselineOf="@+id/recharge"/>
</androidx.constraintlayout.widget.ConstraintLayout>