<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context="com.btc.application.ui.home.HomeFragment">

    <com.btc.application.util.CustomBtn
        android:id="@+id/buynow"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buynow"
        android:text="@string/action_buynow"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <com.btc.application.util.CustomBtn
        android:id="@+id/coming_soon"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buynow"
        android:text="@string/title_coming_soon"
        android:textColorHint="@color/white"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/title_notice"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>